force-app/main/default/objects/NI_Value_Calculator__c/NI_Value_Calculator__c.object-meta.xml
<CustomObject>
    <label>Newmarket Value Calculator</label>
    <nameField>
        <displayFormat>NVC-{000000}</displayFormat>
        <label>Calculation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Newmarket Value Calculation</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>