force-app/main/default/objects/NI_Value_Calculator__c/fields/Annual_Increase_in_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Increase_in_Revenue__c</fullName>
    <formula>((( Average_of_Bookings_per_rep__c * Number_of_Sales_People__c ) * (VALUE(SUBSTITUTE(TEXT(PercentWinRate__c), &quot;%&quot;, &quot;&quot;)) * 0.01) ) *
( Average_Booking_Amount_per_rep__c +( Average_Booking_Amount_per_rep__c * (VALUE(SUBSTITUTE(TEXT(PercentBookingSize__c), &quot;%&quot;, &quot;&quot;)) * 0.01) )))+
(( Number_of_Sales_People__c * Annual_Quota_per_rep__c ) * (VALUE(SUBSTITUTE(TEXT(PercentBookingSize__c), &quot;%&quot;, &quot;&quot;)) * 0.01) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Increase in Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>