force-app/main/default/objects/NI_Value_Calculator__c/fields/Annual_of_events_per_rep__c.field-meta.xml
<CustomField>
    <fullName>Annual_of_events_per_rep__c</fullName>
    <formula>Average_of_Bookings_per_rep__c * Average_of_events_per_booking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual # of events (per rep)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>