force-app/main/default/objects/NI_Value_Calculator__c/fields/Annual_of_events_Per_Venue__c.field-meta.xml
<CustomField>
    <fullName>Annual_of_events_Per_Venue__c</fullName>
    <formula>Number_of_Sales_People__c * Annual_of_events_per_rep__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual # of events Per Venue</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>