force-app/main/default/objects/NI_Value_Calculator__c/fields/Annual_Quota_Per_Venue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Quota_Per_Venue__c</fullName>
    <formula>Number_of_Sales_People__c * Annual_Quota_per_rep__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Quota Per Venue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>