force-app/main/default/objects/NI_Value_Calculator__c/fields/Average_of_Bookings_per_rep__c.field-meta.xml
<CustomField>
    <fullName>Average_of_Bookings_per_rep__c</fullName>
    <label>Average # of Bookings (per rep)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>