force-app/main/default/objects/NI_Value_Calculator__c/fields/Percent_Increase_in_booking_size__c.field-meta.xml
<CustomField>
    <fullName>Percent_Increase_in_booking_size__c</fullName>
    <label>% increase in booking size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>