force-app/main/default/objects/NI_Value_Calculator__c/fields/PercentWinRate__c.field-meta.xml
<CustomField>
    <fullName>PercentWinRate__c</fullName>
    <label>% increase in win rate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1%</fullName>
            </value>
            <value>
                <fullName>2%</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
                <default>true</default>
                <label>25%</label>
            </value>
            <value>
                <fullName>28%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>