force-app/main/default/objects/NI_Value_Calculator__c/fields/Total_amount_of_Newmarket_solution__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_of_Newmarket_solution__c</fullName>
    <label>Total amount of Newmarket solution</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>