force-app/main/default/objects/NI_Value_Calculator__c/fields/Total_solution_cost_diff_per_event__c.field-meta.xml
<CustomField>
    <fullName>Total_solution_cost_diff_per_event__c</fullName>
    <formula>(Total_amount_of_Newmarket_solution__c-Total_amount_of_Competitor_solution__c)/(((Average_of_Bookings_per_rep__c+(Average_of_Bookings_per_rep__c*(VALUE(SUBSTITUTE(TEXT(PercentWinRate__c), &quot;%&quot;, &quot;&quot;)) * 0.01)))*Average_of_events_per_booking__c)*Number_of_Sales_People__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total solution cost diff per event</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>